// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description should render correct for multiple elements 1`] = `
<div
  className="container card"
>
  <div
    className="table-responsive-sm"
  >
    <table
      className="table table-dark table-striped table-bordered table-hover"
    >
      <thead
        className="bg-info"
      >
        <tr>
          <th>
            #
          </th>
          <th>
            Company Locations
          </th>
          <th>
            Average Reported Tips
          </th>
          <th>
            Tips in This Zip Code area
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            282 Bowery, New York, NY 10012
          </td>
          <td>
            $
            12.89
             / Hour
          </td>
          <td>
            $
            12.89
             / Hour
          </td>
        </tr>
      </tbody>
      <tbody>
        <tr>
          <td>
            2
          </td>
          <td>
            80 Spring Street, New York, NY 10012
          </td>
          <td>
            $
            13.89
             / Hour
          </td>
          <td>
            $
            12.89
             / Hour
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Description should render correct for single element 1`] = `
<div
  className="container card"
>
  <div
    className="table-responsive-sm"
  >
    <table
      className="table table-dark table-striped table-bordered table-hover"
    >
      <thead
        className="bg-info"
      >
        <tr>
          <th>
            #
          </th>
          <th>
            Company Locations
          </th>
          <th>
            Average Reported Tips
          </th>
          <th>
            Tips in This Zip Code area
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            282 Bowery, New York, NY 10012
          </td>
          <td>
            $
            12.89
             / Hour
          </td>
          <td>
            $
            12.89
             / Hour
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
